Fix footer overlapping content pane

--- a/themes/ldp/css/override-style.css
+++ b/themes/ldp/css/override-style.css
@@ -90,7 +90,6 @@
  */
 .ldp #footer {
   position: relative;
-  top: -10px;
   padding: 5px 10px;
   background: #808078 url(../images/black-gradient.png) 0 0 repeat-x;
   color: #d9d9d6;
